Reformulation dans 02_Concepts
fixed typo

--- a/02_Concepts.tex
+++ b/02_Concepts.tex
@@ -420,8 +420,8 @@ Quelques ensembles non énumérables :
    Il est adéquat de visualiser un ensemble à l'aide d'un mot binaire
    où le bit $i$ vaut 1 si le $i^{\mathrm{ième}}$ élément est pris dans le sous-ensemble.
    Par exemple, le sous-ensemble $\{1,4\}$ de $\{1,3,4\}$ peut être représenté par $101$.
-   Seulement, comme il y a un nombre infini de nombre naturels, on a mot binaire infini.
-   Par exemple, les nombres pairs, c'est le mot $10101010101\ldots$:
+   Seulement, comme il y a un nombre infini de nombre naturels, on a un mot binaire infini.
+   Par exemple, pour les nombres pairs, c'est le mot $10101010101\ldots$:
    \begin{verbatim}
 		0123456789...
 		1010101010... nombres pairs
