--- a/03_ResultatsFondamentaux.tex
+++ b/03_ResultatsFondamentaux.tex
@@ -234,7 +234,7 @@ Grâce à sa définition, on sait montrer qu'une fonction est calculable. Mais c
 montrer qu'une fonction n'est pas calculable? Pour ça on a besoin d'une définition
 couvrant la totalité des fonctions calculables.
 
-On peut également se demander si prendre un modèle particulier est restrictif? Un modèle peut être la logique mathématique (Gödel), ou la machine de Turing, ou les langages de programmation, etc.
+On peut également se demander si prendre un modèle particulier est restrictif? Un modèle peut être la logique mathématique (Gödel), la machine de Turing, les langages de programmation, etc.
 
 La thèse de Turing répond à ces questions.
 \begin{enumerate}
@@ -286,6 +286,12 @@ Dans le cours on utilise un langage de programmation, Java, comme modèle.
 			distinctes d'un même objet.
 	\end{itemize}
 \end{myprop}
+
+\begin{mydef}[Nombre de Gödel]
+	La numération de Gödel est une fonction qui assigne à chaque symbole ou programme syntaxiquement correct d'un language, un nombre unique appelé \textbf{Nombre de Gödel} (Souvent utilisé dans les démonstrations par réduction).
+\end{mydef}
+
+
 
 % subsection programmes_et_fonctions (end)
 
