--- a/07_ClassesComplexite.tex
+++ b/07_ClassesComplexite.tex
@@ -28,7 +28,7 @@ algorithme P permet:
 \end{mydef}
 
 Il existe plusieurs méthodes de réduction qui ont des propriétés différentes.
-Mais dans ce cours on va en étudier
+Mais dans ce cours on ne va en étudier
 que 3 :
 \begin{itemize}
 	\item réduction algorithmique
