--- a/01_Introduction.tex
+++ b/01_Introduction.tex
@@ -37,8 +37,8 @@ En mathématique, il est impossible de trouver deux nombres entiers $m$ et $n$ t
 Dans \textbf{le langage courant}, l’information est une affirmation de quelque chose (ayant un sens) qui est vrai ou faux. Tandis que dans le \textbf{jargon informatique}, l’information est un objet formel, un symbole, sans signification propre (243, « Oui »).
 Dans ces deux cas, le traitement de l'information se fait de façon différent:
 \begin{itemize}
-	\item Dans le langage courant, on \textit{traite} l'information en applicant un raisonnement afin de produire des nouvelles informations à partir de l'information de départ. L'objectif est d'obtenir une affirmation vraie et utile.
-	\item En informatique, on \textit{traite} l’information (objet formel) par des manipulations automatiques afin de produire un nouvel objet. L’objectif est d’obtenir un nouvel objet auquel on peut donner un sens. Le programme représente’un objet formel  un raisonnement (qui permet de donner du sens aux résultats). Il faut donc \textbf{spécifier un programme}, c'est-à-dire décrire la fonction qu’il calcule, pour donner du sens au résultat qu’il produit.
+	\item Dans le langage courant, on \textit{traite} l'information en appliquant un raisonnement afin de produire des nouvelles informations à partir de l'information de départ. L'objectif est d'obtenir une affirmation vraie et utile.
+	\item En informatique, on \textit{traite} l’information (objet formel) par des manipulations automatiques afin de produire un nouvel objet. L’objectif est d’obtenir un nouvel objet auquel on peut donner un sens. Le programme représente un raisonnement qui permet de donner du sens aux résultats. Il faut donc \textbf{spécifier un programme}, c'est-à-dire décrire la fonction qu’il calcule, pour donner du sens au résultat qu’il produit.
 \end{itemize}
 
 \section{Notion de problème}
