Ajout partie 5 Complexite et calculabilite

--- a/01_Introduction.tex
+++ b/01_Introduction.tex
@@ -62,6 +62,32 @@ La compréhension du concept de programme est basée sur la compréhension du co
 
 Il existe plein de formalismes permettant la description d'une \og procédure effective\fg.
 
+\section{Calculabilité et complexité}
+\label{sec:calculabilite_et_complexite}
+
+La domaine de la calculabilité se porte sur la recherche et l'analyse de l'informatique, et ce :
+
+\begin{itemize}
+	\item indépendamment des réalisations physiques des machines
+	\item indépendamment des langages et méthodes de programmation existants aujourd'hui
+\end{itemize}
+
+Nous obtenons, grâce à la calculabilité, des résultats fondamentaux d'un point de vue théorique et pratique, mais également philosophique.
+
+Lorsqu'on résout un problème à l'aide d'un programme, on exige que le programme soit \textit{correct} et, si possible, que ce dernier soit le plus \textit{efficace} possible. L'efficacité est une mesure des ressources nécessaires à mettre en oeuvre pour que le programme produise les résultats attendus (temps CPU, espace mémoire nécessaire, \ldots{}). Certains problèmes,bien que calculables, sont infaisables en pratique, ce qui amène la notion de \textit{complexité}.
+
+La complexité se définit comme la frontière entre le \textit{faisable} et \textit{infaisable} en pratique, indépendamment :
+
+\begin{itemize}
+	\item du formalisme utilisé
+	\item de la machine utilisée
+	\item du contexte technologique
+\end{itemize}
+
+Chaque programme possède sa propre complexité, qui peut être polynomiale, exponentielle, logarithmique, etc. Cela dépend du design du programme (boucles, affectations, \ldots)
+
+
+
 \section{Résultats principaux}
 \label{sec:r_sultat_principaux}
 
